# calsync

./: .env.example  .gitignore  CALENDAR_PAIRS.md  CLAUDE.md  Caddyfile  DEPLOY.md  DOCKER_SHORTCUTS.md  Dockerfile  FIXES_APPLIED.md  LOCAL_DEVELOPMENT.md  PRODUCTION_FIXES.md  PROXY.md  QUICK_START.md  README.md  TODO.md  VPS_DEPLOYMENT_READINESS.md  auth-setup.sh  check_test_events.py  clear_sync_tokens.py  copy-token.sh  create_test_events.py  create_verification_test_events.py  debug_icloud_changes.py  debug_sync_operations.py  dev.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.secrets.yml  docker-compose.yml  env.example  pyproject.toml  pytz.py  quick.sh  race_condition_fix_summary.py  rebuild.sh  setup-docker-secrets.sh  test-changes.sh  test-icloud.py  test_deployed_bug.py  test_id_gen.py  (+2 more)
.claude/agents/: calendar-systems-reviewer.md  security-commit-scanner.md
docker/: entrypoint.sh
src/calsync_claude/: __init__.py  calendar_manager.py  cli.py  config.py  database.py  models.py  server.py  sync_engine.py
src/calsync_claude/services/: __init__.py  base.py  google.py  icloud.py
tests/: __init__.py  conftest.py  test_models.py  test_sync_engine.py  test_sync_reflection.py
