[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calsync-claude"
version = "2.0.0"
description = "Advanced two-way calendar synchronization with enhanced conflict resolution and async operations"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Claude", email = "noreply@anthropic.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Communications",
]
requires-python = ">=3.9"
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.1.1",
    "google-auth-oauthlib>=1.1.0",
    "caldav>=1.3.9",
    "icalendar>=5.0.0",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",
    "click>=8.1.7",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.24.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "asyncio-mqtt>=0.11.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "structlog>=23.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "freezegun>=1.2.0",
    "httpx>=0.24.0",
]

[project.scripts]
calsync-claude = "calsync_claude.cli:main"

[project.urls]
Homepage = "https://github.com/anthropics/calsync-claude"
Repository = "https://github.com/anthropics/calsync-claude.git"
Issues = "https://github.com/anthropics/calsync-claude/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/calsync_claude"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.ruff]
target-version = "py39"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--cov=src/calsync_claude --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src/calsync_claude"]
omit = ["*/tests/*"]
